--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -24,5 +24,6 @@ bin.includes = META-INF/,\
                lib/xercesImpl.jar,\
                conf/,\
                bin/,\
-               .
+               .,\
+               lib/biobank-remote.jar
 source.. = src/
