--- a/eclipse_ws/biobank.common/.classpath
+++ b/eclipse_ws/biobank.common/.classpath
@@ -25,6 +25,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/spring.jar" sourcepath="/home/delphine/projects/sources/spring-framework-2.0.3/dist/spring-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="conf/"/>
+	<classpathentry kind="lib" path="lib/biobank-remote.jar" sourcepath="/biobank.server"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
