--- a/eclipse_ws/biobank.server/build.xml
+++ b/eclipse_ws/biobank.server/build.xml
@@ -15,6 +15,7 @@
 
 	<target name="init">
 		<mkdir dir="bin" />
+		<mkdir dir="output" />
 		<copy includeemptydirs="false" todir="bin">
 			<fileset dir="src">
 				<exclude name="**/*.launch" />
@@ -37,5 +38,14 @@
 		</javac>
 	</target>
 
-	
+	<target name="build-remote-lib" depends="build">
+		<jar destfile="output/biobank-remote.jar" basedir="bin">
+			<manifest>
+				<attribute name="Generated-By" value="AICML Ant build file" />
+			</manifest>
+			<exclude name="**/*Impl.*" />
+		</jar>
+	</target>
+
+
 </project>
