--- a/eclipse_ws/biobank2.importer/conf/log4j.properties
+++ b/eclipse_ws/biobank2.importer/conf/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=warn, R, stdout
 log4j.category.edu.ualberta.med.biobank=info
-log4j.category.edu.ualberta.med.biobank.importer=trace
+log4j.category.edu.ualberta.med.biobank.importer=info
 
 #log4j.category.edu.ualberta.med.biobank.widgets.MultiSelect=TRACE,stdout
 
@@ -22,27 +22,27 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 #log4j.rootLogger=warn, stdout
 #log4j.rootLogger=warn, file
-log4j.logger.org.hibernate=debug
+log4j.logger.org.hibernate=info
 
 
 ### log just the SQL
-log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.SQL=info
 
 ### log JDBC bind parameters ###
-log4j.logger.org.hibernate.type=debug
+log4j.logger.org.hibernate.type=info
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=debug
+log4j.logger.org.hibernate.tool.hbm2ddl=info
 
 ### log cache activity ###
-log4j.logger.org.hibernate.cache=debug
+log4j.logger.org.hibernate.cache=info
 
 ### log JDBC resource acquisition
-log4j.logger.org.hibernate.jdbc=debug
+log4j.logger.org.hibernate.jdbc=info
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
-log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
+log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=info
 
 log4j.logger.gov.nih.nci=error
 log4j.logger.org.springframework=error
