--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -319,4 +319,4 @@ ENABLE_GRID_LOGIN_MODULE=false
 ENABLE_CSM_LOGIN_MODULE=true
 CAGRID_LOGIN_MODULE_NAME=grid
 
-HIBERNATE_SHOW_SQL=true
+#HIBERNATE_SHOW_SQL=true
