--- a/build.xml
+++ b/build.xml
@@ -125,6 +125,7 @@
 		<uptodate property="cacore.sdk.uptodate" targetfile="${cacore.sdk.dir}/output/biobank2">
 			<srcfiles file="sdk_conf/deploy.properties" />
 			<srcfiles file="sdk_conf/build.properties" />
+			<srcfiles file="sdk_conf/validator-extension-Config.xml" />
 			<srcfiles file="model/biobank2.uml" />
 		</uptodate>
 	</target>
@@ -132,6 +133,7 @@
 	<target name="sdk" depends="cacore-download,check-cacore-sdk-uptodate" unless="cacore.sdk.uptodate" description="builds the caCORE SDK from the data model">
 		<copy file="sdk_conf/deploy.properties" tofile="${cacore.sdk.dir}/conf/deploy.properties" />
 		<copy file="sdk_conf/build.properties" tofile="${cacore.sdk.dir}/build.properties" />
+		<copy file="sdk_conf/validator-extension-Config.xml" tofile="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />
 		<copy file="security-logs/clm-log4j/log4j.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/log4j.xml" />
 		<ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
 	</target>
@@ -216,6 +218,7 @@
 			</fileset>
 		</copy>
 		<copy todir="${eclipse.proj.dir.common}/lib" file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar" />
+		<copy todir="${eclipse.proj.dir.common}/lib" file="${cacore.sdk.dir}/system/lib/hibernate-validator.jar" />
 		<copy todir="${eclipse.proj.dir.importer}/lib" file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar" />
 		<copy todir="${eclipse.proj.dir.common}/conf">
 			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/conf">
