--- a/build.xml
+++ b/build.xml
@@ -126,15 +126,20 @@
 			<srcfiles file="sdk_conf/deploy.properties" />
 			<srcfiles file="sdk_conf/build.properties" />
 			<srcfiles file="sdk_conf/validator-extension-Config.xml" />
+			<srcfiles file="sdk_conf/config.xml" />
+			<srcfiles file="sdk_conf/application-config-client.xml" />
 			<srcfiles file="model/biobank2.uml" />
 		</uptodate>
 	</target>
 
-	<target name="sdk" depends="cacore-download,check-cacore-sdk-uptodate" unless="cacore.sdk.uptodate" description="builds the caCORE SDK from the data model">
+	<target name="sdk" depends="cacore-download,check-cacore-sdk-uptodate, build-server-validator-lib" unless="cacore.sdk.uptodate" description="builds the caCORE SDK from the data model">
 		<copy file="sdk_conf/deploy.properties" tofile="${cacore.sdk.dir}/conf/deploy.properties" />
 		<copy file="sdk_conf/build.properties" tofile="${cacore.sdk.dir}/build.properties" />
 		<copy file="sdk_conf/validator-extension-Config.xml" tofile="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />
+		<copy file="sdk_conf/application-config.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config.xml" />
+		<copy file="sdk_conf/application-config-client.xml" tofile="${cacore.sdk.dir}/conf/system/package/local-client/conf/application-config-client.xml" />
 		<copy file="security-logs/clm-log4j/log4j.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/log4j.xml" />
+		<copy todir="${cacore.sdk.dir}/system/lib/"  file="${eclipse.proj.dir.server}/output/biobank-validators.jar" />
 		<ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
 	</target>
 
@@ -325,6 +330,11 @@
 	</target>
 
 
+	<target name="build-server-validator-lib">
+		<ant dir="${eclipse.proj.dir.server}" target="build-validator-lib" inheritRefs="false" />
+	</target>
+
+
 	<target name="build-server-project">
 		<dependset>
 			<srcfilelist dir="${cacore.sdk.dir}/output/biobank2/package/local-client/lib" files="${sdk.local.jar.files.basename}" />
@@ -337,7 +347,7 @@
 	</target>
 
 	<!-- copied from sdk build.xml -->
-	<target name="package-webapp-orm" depends="package-codegen-orm, build-server-project">
+	<target name="package-webapp-orm" depends="package-codegen-orm">
 		<war destfile="${cacore.sdk.dir}\${package.system.dir}\${PROJECT_NAME}.war" webxml="${cacore.sdk.dir}\${build.conf.web-inf.dir}\web.xml">
 			<manifest>
 				<attribute name="Generated-By" value="biobank2 caCORE SDK Code Generator" />
