--- a/eclipse_ws/biobank.server/.classpath
+++ b/eclipse_ws/biobank.server/.classpath
@@ -33,7 +33,7 @@
 	<classpathentry kind="lib" path="lib/dom4j-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/ehcache-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate-commons-annotations.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-validator.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-validator.jar" sourcepath="/home/delphine/projects/sources/hibernate-validator-3.1.0.GA/src"/>
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
 	<classpathentry kind="lib" path="lib/jta.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-3.1.13-bin.jar"/>
