build jasperreports dynamically

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -9,6 +9,7 @@ bin.includes = META-INF/,\
                plugin_customization.ini,\
                lib/,\
                .options,\
-               about.mappings
+               about.mappings,\
+               lib/jdt-compiler-3.1.1.jar
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
