--- a/sdk_conf/build.properties
+++ b/sdk_conf/build.properties
@@ -104,6 +104,9 @@ xml.comment.end=-->
 extension.api.interface=edu.ualberta.med.biobank.server.CustomApplicationService
 extension.api.impl=edu.ualberta.med.biobank.server.CustomApplicationServiceImpl
 extension.dao.impl=edu.ualberta.med.biobank.server.CustomORMDAOImpl
+#extension.api.interface=gov.nih.nci.system.applicationservice.WritableApplicationService
+#extension.api.impl=gov.nih.nci.system.applicationservice.impl.WritableApplicationServiceImpl
+#extension.dao.impl=gov.nih.nci.system.dao.orm.WritableORMDAOImpl
 extension.api.security=${extension.api.interface}.*=DUMMYVALUE
 
 sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
