--- a/eclipse_ws/biobank.server/.classpath
+++ b/eclipse_ws/biobank.server/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/hibernate3.jar"/>
 	<classpathentry kind="lib" path="lib/caGrid-CQL-cql.1.0-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate-validator.jar"/>
+	<classpathentry kind="lib" path="lib/sdk-security.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
