--- a/sdk_conf/build.properties
+++ b/sdk_conf/build.properties
@@ -101,9 +101,9 @@ xml.comment.start=<!--
 xml.comment.end=-->
 
 
-extension.api.interface=edu.ualberta.med.biobank.server.CustomApplicationService
-extension.api.impl=edu.ualberta.med.biobank.server.CustomApplicationServiceImpl
-extension.dao.impl=edu.ualberta.med.biobank.server.CustomORMDAOImpl
+extension.api.interface=edu.ualberta.med.biobank.server.BiobankApplicationService
+extension.api.impl=edu.ualberta.med.biobank.server.BiobankApplicationServiceImpl
+extension.dao.impl=edu.ualberta.med.biobank.server.BiobankORMDAOImpl
 #extension.api.interface=gov.nih.nci.system.applicationservice.WritableApplicationService
 #extension.api.impl=gov.nih.nci.system.applicationservice.impl.WritableApplicationServiceImpl
 #extension.dao.impl=gov.nih.nci.system.dao.orm.WritableORMDAOImpl
@@ -114,7 +114,8 @@ sdk.api.impl=gov.nih.nci.system.applicationservice.impl.ApplicationServiceImpl
 sdk.dao.impl=gov.nih.nci.system.dao.orm.ORMDAOImpl
 
 sdk.security.readable.applicationservice.method.impl=gov.nih.nci.system.util.ApplicationServiceMethodHelper
-extension.sdk.security.writable.applicationservice.method.impl=gov.nih.nci.system.util.WritableApiApplicationServiceMethodHelper
+#extension.sdk.security.writable.applicationservice.method.impl=gov.nih.nci.system.util.WritableApiApplicationServiceMethodHelper
+extension.sdk.security.writable.applicationservice.method.impl=edu.ualberta.med.biobank.server.BiobankApiApplicationServiceMethodHelper
 
 HBM2DDL_ENABLED=false
 HBM2DDL_TYPE=validate
