add sources download

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ backup/
 biobank_jars.tar.bz2
 caCORE_SDK
 caCORE_SDK_411.tar.gz
+lib-sources/
+lib-sources.tar.bz2
 eclipse_ws/.metadata
 eclipse_ws/biobank.common/bin
 eclipse_ws/biobank.common/lib/*
