BiobankApplicationService security methods retrieve user information on the server security context

--- a/build.xml
+++ b/build.xml
@@ -359,6 +359,7 @@
 				<include name="hibernate3*.*" />
 				<include name="caGrid-CQL-cql*.*" />
 				<include name="hibernate-validator*.*" />
+				<include name="acegi-security*.*" />
 			</fileset>
 			<fileset dir="${cacore.sdk.dir}/writable-api/dist" includes="*.jar" />
 			<fileset dir="${cacore.sdk.dir}/system/security/dist" includes="*.jar" />
