server method to call sql queries

--- a/build.xml
+++ b/build.xml
@@ -360,6 +360,7 @@
 				<include name="caGrid-CQL-cql*.*" />
 				<include name="hibernate-validator*.*" />
 				<include name="acegi-security*.*" />
+				<include name="log4j*.*" />
 			</fileset>
 			<fileset dir="${cacore.sdk.dir}/writable-api/dist" includes="*.jar" />
 			<fileset dir="${cacore.sdk.dir}/system/security/dist" includes="*.jar" />
