--- a/sdk_conf/build.properties
+++ b/sdk_conf/build.properties
@@ -101,12 +101,12 @@ xml.comment.start=<!--
 xml.comment.end=-->
 
 
-extension.api.interface=edu.ualberta.med.biobank.server.BiobankApplicationService
-extension.api.impl=edu.ualberta.med.biobank.server.BiobankApplicationServiceImpl
-#extension.dao.impl=edu.ualberta.med.biobank.server.BiobankORMDAOImpl
+extension.api.interface=edu.ualberta.med.biobank.server.applicationservice.BiobankApplicationService
+extension.api.impl=edu.ualberta.med.biobank.server.applicationservice.BiobankApplicationServiceImpl
+extension.dao.impl=edu.ualberta.med.biobank.server.orm.BiobankORMDAOImpl
 #extension.api.interface=gov.nih.nci.system.applicationservice.WritableApplicationService
 #extension.api.impl=gov.nih.nci.system.applicationservice.impl.WritableApplicationServiceImpl
-extension.dao.impl=gov.nih.nci.system.dao.orm.WritableORMDAOImpl
+#extension.dao.impl=gov.nih.nci.system.dao.orm.WritableORMDAOImpl
 extension.api.security=${extension.api.interface}.*=DUMMYVALUE
 
 sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
@@ -115,7 +115,7 @@ sdk.dao.impl=gov.nih.nci.system.dao.orm.ORMDAOImpl
 
 sdk.security.readable.applicationservice.method.impl=gov.nih.nci.system.util.ApplicationServiceMethodHelper
 #extension.sdk.security.writable.applicationservice.method.impl=gov.nih.nci.system.util.WritableApiApplicationServiceMethodHelper
-extension.sdk.security.writable.applicationservice.method.impl=edu.ualberta.med.biobank.server.BiobankApiApplicationServiceMethodHelper
+extension.sdk.security.writable.applicationservice.method.impl=edu.ualberta.med.biobank.server.applicationservice.helper.BiobankApiApplicationServiceMethodHelper
 
 HBM2DDL_ENABLED=false
 HBM2DDL_TYPE=validate
