--- a/eclipse_ws/biobank.server/.classpath
+++ b/eclipse_ws/biobank.server/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="lib/hibernate-validator.jar"/>
 	<classpathentry kind="lib" path="lib/sdk-security.jar"/>
 	<classpathentry kind="lib" path="lib/acegi-security-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
