resolves #265 - Only one keystore is needed for the application: * the file all.keystore contains all possibles keystore (localhost and aicml-med until now) * the folder security-logs/jboss contains localhost.keystore and aicml-med.cs.ualberta.keystore file that should be used on the server (contains only one entry each)

--- a/build.xml
+++ b/build.xml
@@ -230,7 +230,7 @@
 		<fail unless="env.JBOSS_HOME" message="$JBOSS_HOME not defined" />
 		<copy file="${secu-log.dir}/jboss/login-config.xml" tofile="${env.JBOSS_HOME}/server/default/conf/login-config.xml" overwrite="true" />
 		<copy file="${secu-log.dir}/jboss/server${debugMode}.xml" tofile="${env.JBOSS_HOME}/server/default/deploy/jbossweb-tomcat55.sar/server.xml" overwrite="true" />
-		<copy file="${secu-log.dir}/jboss/biobank.keystore" tofile="${env.JBOSS_HOME}/server/default/conf/biobank.keystore" overwrite="true" />
+		<copy file="${secu-log.dir}/jboss/localhost.keystore" tofile="${env.JBOSS_HOME}/server/default/conf/biobank.keystore" overwrite="true" />
 		<!-- for compatibility: this file has been split -->
 		<delete file="${env.JBOSS_HOME}/server/default/deploy/mysql-ds.xml" />
 		<copy file="${secu-log.dir}/jboss/upt-ds.xml" tofile="${env.JBOSS_HOME}/server/default/deploy/upt-ds.xml" overwrite="true" />
